[project]
name = "wh04-1st-2team-Bae-BaekJoJo"
version = "0.2.2"
description = "Default template for PDM package"
authors = [
    {name = "cho6019", email = "j01040864205@gmail.com"},
    {name = "jiwon1118", email = "b23386585@gmail.com"},
    {name = "lucas_hub12", email = "hyeonggyunbae@gmail.com"},
    {name = "nunininu", email = "sgcho0907@gmail.com"},
]
dependencies = [
    "streamlit>=1.42.1",
    "pandas>=2.2.3",
    "streamlit-calendar>=1.2.1"
]
requires-python = ">=3.10,<4.0"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true
